..F....... [ZBX-23465] fixed alignment of tag badges

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -2457,8 +2457,8 @@ select {
 		}
 	}
 
-	&:last-child {
-		margin: 0;
+	&:last-of-type {
+		margin-right: 0;
 	}
 
 	&.green-bg {
